fix: align in header

--- a/style.css
+++ b/style.css
@@ -11,8 +11,10 @@ body{
 .header{
     
     background-color: #2C2623;
-    background-image: url(./assets/start-screen-background.jpg);
-    height: 908px;
+    /* background-image: url(./assets/start-screen-background.jpg); */
+    background: url(noise_lines_transparent@2X.png), radial-gradient(100% 215.42% at 0% 0%, #5B483A 0%, #262425 100%), #211F20;
+
+    height: 926px;
     width: 1920px;
     /* margin: 0 auto; */
     margin-left: auto;
@@ -37,8 +39,27 @@ body{
    
     /* margin-left: 360px; */
     vertical-align: middle;
+    list-style-type: none;
+    /* justify-content: space-between; */
 
     
+}
+
+.list__link{
+    color: #ffffff;
+    font-family: Arial;
+    font-size: 15px;
+    line-height: 160%;
+    text-decoration: unset;
+}
+
+.list__link__disabled{
+    color: #cdcdcd;
+    /* text-decoration: unset; */
+}
+
+.list__link :hover{
+    text-decoration:underline;
 }
 
 .heder-left{    
@@ -68,37 +89,31 @@ body{
     padding-left: 3px;
 }
 
-.header-nav{
-    font-family: Arial;
-    line-height: 160%;
-    font-size: 15px;
-    width: 460px;
-    margin-left: 550px;
-    /* letter-spacing: 0.01em; */
-}
-
-/* .header-nav li{
-    margin-left: 150px;
-} */
-
-li#l2{
-    margin-left: 17px;
-}
-
-li#l3, li#l4, li#l5{
-    margin-left: 29px;
-}
-
-ul{
+.menu{
     display: flex;
-    list-style: none;
-    padding-left: 0px;
-    
+    margin-left: 550px;
+    min-width: 460px;
 }
+
+.list{
+    display: flex;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+    justify-content: space-between;
+}
+
+.list__item{
+    display: flex;
+    align-items: center;
+}
+
+
 
 .block2{
     display: flex; 
-    margin-top: 59px;
+    margin-top: 76px;
 }
 .not-only{
     width: 460px;
@@ -114,24 +129,28 @@ ul{
     line-height: 130%;
 }
 .not-only-text{
-    margin-top: 42px;
+    margin-top: 30px;
     font-family: Arial;
     font-size: 15px;
     line-height: 24px;
     letter-spacing: 0.02em;
     width: 465px;
+    font-weight: 400;
     /* padding-right: -10px; */
 }
 
-.make-a-friend-button{
+.hero__button{
+    display: flax;
     margin-top: 40px;
+    padding: 15px 45px;
     width: 200px;
     height: 52px;
-    border-radius: 26px;
-    font-size: 15px;
-    font-family: Arial;
+    border-radius: 100px;
+    font-size: 17px;
+    font-family: Georgia;
+    letter-spacing: 0.01em;
     /* font-weight: lighter; */
-    line-height: 24px;
+    line-height: 19px;
     background-color: #F1CDB3;
     border: none;
 }
@@ -153,20 +172,20 @@ ul{
     margin-right: auto;
 }
 
-.about-pets{
+.about__pets{
     /* margin-left: 535px; */
     display: flex;
     width: 600px;
     margin-left: auto;
     margin-right: auto;
 }
-.about-pets img {
-    margin: auto;
+.about__pets img {
+    margin: auto ;
     /* margin-left: auto;
     margin-right: auto; */
 }
 
-.about-block{
+.about__block{
     /* margin-left: 120px; */
     /* display: flex; */
     color: black;
@@ -176,7 +195,7 @@ ul{
     margin-bottom: auto;
 }
 
-.about-block-title{
+.about__block_title{
     display: flex;
     /* align-items: center; */
     width: 400px;
@@ -316,10 +335,10 @@ ul{
     margin-bottom: 30px;
 }
 
-.pets-card-button{
+.pets__card_button{
     width: 187px;
     height: 52px;
-    border-radius: 17px;
+    border-radius: 100px;
     
     background-color: #F1CDB3;
     border: none;
@@ -332,11 +351,11 @@ ul{
 }
 
 
-#btn-1{
+#btn_1{
     margin-top: 66px;
     width: 259px;
     height: 61px;
-    border-radius: 26px;
+    border-radius: 100px;
     font-size: 15px;
     font-family: Arial;
     /* font-weight: lighter; */
@@ -378,9 +397,7 @@ ul{
     margin-bottom: 60px;
 }
 
-.list{
 
-}
 
 .list-1, .list-2{
     display : flex;
@@ -436,7 +453,9 @@ ul{
 
 
 .footer{
-    background-color: #2E2726;
+    /* background-color: #2E2726; */
+    background: url(noise_lines_transparent@2X.png), radial-gradient(100% 215.42% at 0% 0%, #5B483A 0%, #262425 100%), #211F20;
+  
     height: 354px;
     width: 1920px;
 }
@@ -448,13 +467,18 @@ ul{
     margin-left: auto;
     margin-right: auto;
     height: 354px;
-    background-color: #2E2726;
+    /* background-color: #2E2726; */
+    /* background: url(noise_lines_transparent@2X.png), radial-gradient(100% 215.42% at 0% 0%, #5B483A 0%, #262425 100%), #211F20; */
+  
 
 }
 
 .footer-card{
     width: 400px;
     color: white;
+}
+.footer-card img{
+    margin-top: 40px;
 }
 
 .footer-card-title{
@@ -471,13 +495,24 @@ ul{
     line-height: 130%;
     /* or 45px */
 
-    letter-spacing: 0.06em;
-
-    /* base-white */
+    letter-spacing: 0.02em;
 
     color: #FFFFFF;
+    margin-bottom: 43px;
+    margin-top: 60px;
 }
 
 .footer-card-text{
     
+
+}
+
+.footer-card-email{
+    /* display: flex; */
+
+}
+.mail{
+    display: flex;
+    margin-bottom: auto;
+    margin-top: auto;
 }
